Project

General

Profile

Actions

Bug #59183

closed

cephfs-data-scan: does not scan_links for lost+found

Added by Patrick Donnelly about 1 year ago. Updated 11 months ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
backport_processed
Backport:
reef,quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
tools
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Importantly, scan_links corrects the placeholder SNAP_HEAD for the first dentry metadata. If lost+found is skipped, then any injected dentries are not corrected.

See:

2023-03-25T00:08:05.225 INFO:teuthology.orchestra.run.smithi072.stderr:2023-03-25T00:08:05.191+0000 7f8a1355f7c0 10 datascan.scan_links: step 2: handling object 4.00000000
2023-03-25T00:08:05.225 INFO:teuthology.orchestra.run.smithi072.stderr:2023-03-25T00:08:05.191+0000 7f8a1355f7c0 10 datascan.scan_links: Not a dirfrag (invalid ino): '4.00000000'

From: /teuthology/pdonnell-2023-03-24_23:11:30-fs-wip-pdonnell-testing-20230323.162417-distro-default-smithi/7219632/teuthology.log


Related issues 3 (0 open3 closed)

Copied to CephFS - Backport #59227: reef: cephfs-data-scan: does not scan_links for lost+foundResolvedPatrick DonnellyActions
Copied to CephFS - Backport #59228: quincy: cephfs-data-scan: does not scan_links for lost+foundResolvedPatrick DonnellyActions
Copied to CephFS - Backport #59229: pacific: cephfs-data-scan: does not scan_links for lost+foundResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly about 1 year ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 50692
Actions #2

Updated by Patrick Donnelly about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59227: reef: cephfs-data-scan: does not scan_links for lost+found added
Actions #4

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59228: quincy: cephfs-data-scan: does not scan_links for lost+found added
Actions #5

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59229: pacific: cephfs-data-scan: does not scan_links for lost+found added
Actions #6

Updated by Backport Bot about 1 year ago

  • Tags set to backport_processed
Actions #7

Updated by Patrick Donnelly 11 months ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF