tools/cephfs: include lost+found in scan_links

Otherwise, any injected dentries have incorrect first snapids.

Fixes: https://tracker.ceph.com/issues/59183
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit d8b6d451847cda2b3b06ed630a14306cd20bf9b8)